# dots_tts_webui_api

./: .env  .env.example  .gitignore  README.md  README.zh-CN.md  constraints.txt  init.sh  pyproject.toml  run.sh  stop.sh
docs/: API.md  ARCHITECTURE_CONSTRAINTS.md  PLAN.md
docs/exec-plan-2026-06-14_13-02-08/: 01-discovery-constraints.md  02-tooling-config-dependencies.md  03-schemas-db-contracts.md  04-adapters-audio-voices.md  05-core-worker-domain.md  06-api-integration-boundaries.md  07-web-ui-workflows.md  08-tests-docs-cleanup.md  09-final-integration-verification.md  README.md  checkpoint.json  split-audit.md  step.json
src/dots_tts_webui_api/: __init__.py  alignment.py  api.py  audio.py  chunking.py  config.py  db.py  logging_config.py  loudness.py  main.py  schemas.py  tts_adapter.py  voices.py  web.py  worker.py
src/dots_tts_webui_api/static/: app.js  styles.css
src/dots_tts_webui_api/templates/: index.html
tests/: conftest.py  test_alignment.py  test_audio_and_voices.py  test_chunking.py  test_db_worker_api.py
