[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dots-tts-webui-api"
version = "0.1.0"
description = "Production-oriented FastAPI wrapper and web UI for dots.tts batch synthesis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.30,<1",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "python-multipart>=0.0.9,<1",
    "numpy>=1.26,<3",
    "soundfile>=0.12,<1",
]

[project.optional-dependencies]
real = [
    "dots.tts @ file:///Users/nbe01/workspace/dots.tts",
]
test = [
    "httpx>=0.27,<1",
    "pytest>=8.2,<9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
