[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dots-tts-webui-api"
version = "0.1.0"
description = "Production-oriented FastAPI wrapper and web UI for dots.tts batch synthesis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.30,<1",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "python-multipart>=0.0.9,<1",
    "numpy>=1.26,<3",
    "soundfile>=0.12,<1",
]

[project.optional-dependencies]
real = [
    # 句级强制对齐用：把中文转无声调拼音以喂给 torchaudio MMS_FA 对齐模型。
    # 纯 Python、轻量；torch/torchaudio 由 dots.tts + constraints.txt 安装，不在此声明。
    "pypinyin>=0.51,<1",
]
test = [
    "httpx>=0.27,<1",
    "pytest>=8.2,<9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
